--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: 'MsNormal';
+
+  src: local('Microsoft New Tai Lue'),
+    url(../fonts/ntailu.ttf) format('ttf');
+}
+
+@font-face {
+  font-family: 'MsBold';
+
+  src: local('Microsoft New Tai Lue'),
+    url(../fonts/ntailub.ttf) format('ttf');
+}
+
+body {
+  background: #edf2f7;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -23389,20 +23407,6 @@ video {
 .animate-bounce {
   -webkit-animation: bounce 1s infinite;
           animation: bounce 1s infinite;
-}
-
-@font-face {
-  font-family: 'MsNormal';
-
-  src: local('Microsoft New Tai Lue'),
-    url(../fonts/ntailu.ttf) format('ttf');
-}
-
-@font-face {
-  font-family: 'MsBold';
-
-  src: local('Microsoft New Tai Lue'),
-    url(../fonts/ntailub.ttf) format('ttf');
 }
 
 @media (min-width: 640px) {
@@ -114352,4 +114356,5 @@ video {
             animation: bounce 1s infinite;
   }
 }
+
 
